--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,367 @@
-@import 'modules.css';
+@import "modules.css";
+
+.site-header__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.site-header__top {
+  padding: 13px 0;
+  padding-left: 193px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  white-space: nowrap;
+  color: var(--color-text-primary);
+  background-color: #f9f9ff;
+}
+
+.address {
+  display: flex;
+  align-items: center;
+  font-style: normal;
+}
+
+.address::before {
+  content: "";
+  margin-right: 9px;
+  width: 14px;
+  height: 13px;
+  background: url("../img/icon-home.svg") no-repeat center / contain;
+}
+
+.phones {
+  display: flex;
+  align-items: center;
+}
+
+.phones::before {
+  content: "";
+  margin-right: 9px;
+  width: 13px;
+  height: 13px;
+  background: url("../img/icon-call.svg") no-repeat center / contain;
+}
+
+.phones__list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.phones__item {
+  display: flex;
+  align-items: center;
+}
+
+.phones__item:not(:last-child) {
+  margin-right: 9px;
+}
+
+.phones__item:not(:last-child)::after {
+  content: "";
+  margin-left: 9px;
+  width: 4px;
+  height: 4px;
+  background: url("../img/icon-dot.svg") no-repeat center / contain;
+}
+
+.phones__link {
+  text-decoration: none;
+  color: inherit;
+  transition: color 0.3s ease;
+}
+
+.phones__link:hover {
+  color: var(--color-orange);
+}
+
+.phones__link:active {
+  opacity: 0.6;
+}
+
+.working-times {
+  display: flex;
+  align-items: center;
+}
+
+.working-times::before {
+  content: "";
+  margin-right: 9px;
+  width: 14px;
+  height: 14px;
+  background: url("../img/icon-schedule.svg") no-repeat center / contain;
+}
+
+.working-time__list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.site-header__inner {
+  padding-top: 20px;
+  background-color: #fff;
+  border: 1px solid #f3f3f3;
+}
+
+.logo-wrapper {
+  position: relative;
+  z-index: 1;
+  width: 178px;
+  height: 100%;
+}
+
+.logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  transform: translateY(-50%);
+  transition: opacity 0.3s ease;
+}
+
+.logo:hover {
+  opacity: 0.8;
+}
+
+.logo:active {
+  opacity: 0.6;
+}
+
+.sitenav {
+  margin: 0 auto;
+  max-width: 800px;
+}
+
+.sitenav__list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+.sitenav__item {
+  display: flex;
+  align-items: center;
+}
+
+.sitenav__item.sitenav__item--active::before {
+  content: "";
+  width: 21px;
+  height: 22px;
+  background: url("../img/icon-fish.svg") no-repeat center / contain;
+}
+
+.sitenav__item:not(:last-child) {
+  margin-right: 55px;
+}
+
+.sitenav__item:nth-child(6n + 3) {
+  margin-bottom: 20px;
+}
+
+.sitenav__link {
+  position: relative;
+  z-index: 1;
+  display: block;
+  font-weight: 500;
+  text-decoration: none;
+  color: var(--color-text-primary);
+  transition: opacity 0.3s ease;
+}
+
+.sitenav__link::after {
+  content: "";
+  position: absolute;
+  bottom: 4px;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 4px;
+  background-color: #f4ffad;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.sitenav__link:hover::after {
+  opacity: 1;
+}
+
+.sitenav__link:active {
+  opacity: 0.6;
+}
+
+.question-link-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.question-link-wrapper::before {
+  content: "";
+  margin-right: 5px;
+  width: 28px;
+  height: 27px;
+  background: url("../img/icon-pet.svg") no-repeat center / contain;
+}
+
+.question-link {
+  position: relative;
+  z-index: 1;
+  text-decoration: none;
+  color: var(--color-text-primary);
+  transition: opacity 0.3s ease;
+}
+
+.question-link::after {
+  content: "";
+  position: absolute;
+  bottom: 4px;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 4px;
+  background-color: #f4ffad;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.question-link:hover::after {
+  opacity: 1;
+}
+
+.question-link:active {
+  opacity: 0.6;
+}
+
+/* HERO */
+
+.hero {
+  position: relative;
+  z-index: -1;
+  overflow: hidden;
+  padding: 153px 32px;
+  padding-bottom: 290px;
+}
+
+.hero__inner {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.hero__inner::before {
+  content: "";
+  position: absolute;
+  bottom: -130px;
+  left: -280px;
+  width: 870px;
+  height: 835px;
+  background: url("../img/bg-hero-pets.png") no-repeat center / contain;
+}
+
+.hero__inner::after {
+  content: "";
+  position: absolute;
+  bottom: -230px;
+  right: -220px;
+  width: 350px;
+  height: 430px;
+  background: url("../img/bg-hero-parrot.png") no-repeat center / contain;
+}
+
+.hero__wrapper {
+  max-width: 608px;
+}
+
+.hero__heading {
+  margin-bottom: 30px;
+}
+
+.hero__heading span {
+  color: #78c0de;
+}
+
+.hero__text {
+  margin: 0;
+  margin-bottom: 38px;
+  max-width: 495px;
+  line-height: 21px;
+}
+
+/* QUOTES */
+.quotes {
+  text-align: center;
+}
+
+.quotes__container {
+  padding: 0 135px;
+  max-width: 1134px;
+}
+
+.quote {
+  position: relative;
+  z-index: 1;
+  margin: 0;
+  margin-bottom: 35px;
+}
+
+.quote::before,
+.quote::after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 42px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.quote::before {
+  top: 0;
+  left: 0;
+  background-image: url(../img/icon-quote-open.svg);
+}
+
+.quote::after {
+  bottom: 15px;
+  right: 0;
+  background-image: url(../img/icon-quote-close.svg);
+}
+
+.quote__text {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 0 auto;
+  max-width: 753px;
+}
+
+.quote__text::before {
+  content: "";
+  margin-bottom: 45px;
+  width: 140px;
+  height: 1px;
+  background-color: #dbdbdb;
+}
+
+.quote__text::after {
+  content: "";
+  margin-top: 35px;
+  width: 140px;
+  height: 1px;
+  background-color: #dbdbdb;
+}
+
+.quotes__author {
+  display: block;
+  font-weight: 500;
+  color: var(--color-text-primary);
+}
