--- a/css/modules.css
+++ b/css/modules.css
@@ -1,9 +1,70 @@
 /* VARIABLES */
 
 :root {
+  --color-text-primary: #333;
+  --color-text-secondary: #949494;
+  --color-orange: #FFBD54;
 }
 
 /* REUSABLES */
+
+.heading {
+  margin: 0;
+  font-weight: bold;
+  color: var(--color-text-primary);
+}
+
+.heading--primary {
+  font-size: 70px;
+  line-height: 64px;
+}
+
+.heading--secondary {
+  font-size: 48px;
+  line-height: 54px;
+}
+
+.heading--tertiary {
+  font-size: 26px;
+  line-height: 29px;
+}
+
+.btn {
+  display: inline-block;
+  padding: 15px 48px;
+  text-decoration: none;
+  font-weight: 500;
+  line-height: 21px;
+  white-space: nowrap;
+  border-radius: 3px;
+  transition: background-color .3s ease;
+}
+
+.btn--dark {
+  color: #fff;
+  background-color: var(--color-text-primary);
+}
+
+.btn--light {
+  color: #fff;
+  background-color: var(--color-orange);
+}
+
+.btn--dark:hover {
+  background-color: rgba(51, 51, 51, 0.8);
+}
+
+.btn--light:hover {
+  background-color: rgba(255, 189, 84, 0.8);
+}
+
+.btn--dark:active {
+  background-color: rgba(51, 51, 51, 0.6);
+}
+
+.btn--light:active {
+  background-color: rgba(255, 189, 84, 0.6);
+}
 
 /* DEFAULT STYLES */
 
@@ -20,6 +81,12 @@ html {
 body {
   margin: 0;
   padding: 0;
+  font-family: "Futura PT", Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  color: var(--color-text-secondary);
+  background-color: #f9f9f9;
+  background-image: url('../img/bg-body.svg');
 }
 
 img {
@@ -50,9 +117,9 @@ body {
 /* SPECIAL CLASSES */
 
 .container {
-  max-width: 1160px;
+  max-width: 1350px;
   margin: 0 auto;
-  padding: 0 25px;
+  padding: 0 20px;
 }
 
 .visually-hidden {
@@ -66,4 +133,42 @@ body {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+/* @FONT-FACE */
+
+@font-face {
+  font-family: "Futura PT";
+  src: url("../fonts/FuturaPT-Bold.woff2") format("woff2"),
+    url("../fonts/FuturaPT-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Futura PT Book";
+  src: url("../fonts/FuturaPT-Book.woff2") format("woff2"),
+    url("../fonts/FuturaPT-Book.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Futura PT";
+  src: url("../fonts/FuturaPT-Light.woff2") format("woff2"),
+    url("../fonts/FuturaPT-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Futura PT";
+  src: url("../fonts/FuturaPT-Medium.woff2") format("woff2"),
+    url("../fonts/FuturaPT-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
