--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,7 @@
 
 .site-header__inner {
   padding-top: 20px;
+  padding-bottom: 20px;
   background-color: #fff;
   border: 1px solid #f3f3f3;
 }
@@ -116,6 +117,7 @@
 }
 
 .logo {
+  display: block;
   position: absolute;
   top: 0;
   left: 0;
@@ -132,6 +134,10 @@
   opacity: 0.6;
 }
 
+.logo img {
+  display: block;
+}
+
 .sitenav {
   margin: 0 auto;
   max-width: 800px;
@@ -144,6 +150,7 @@
   align-items: flex-start;
   justify-content: center;
   flex-wrap: wrap;
+  row-gap: 20px;
   list-style: none;
 }
 
@@ -154,6 +161,7 @@
 
 .sitenav__item.sitenav__item--active::before {
   content: "";
+  margin-right: 12px;
   width: 21px;
   height: 22px;
   background: url("../img/icon-fish.svg") no-repeat center / contain;
@@ -161,10 +169,6 @@
 
 .sitenav__item:not(:last-child) {
   margin-right: 55px;
-}
-
-.sitenav__item:nth-child(6n + 3) {
-  margin-bottom: 20px;
 }
 
 .sitenav__link {
@@ -380,10 +384,9 @@
 
 .services-slider {
   position: relative;
-  z-index: 100;
+  z-index: 10;
   display: flex;
   align-items: center;
-  margin-bottom: 14px;
 }
 
 .services-slider__button {
@@ -432,18 +435,24 @@
 .services-slider__item {
   flex-shrink: 0;
   width: 193px;
-  background-color: #fff;
+}
+
+.services-slider__item:not(.services-slider__item--active) {
+  margin-bottom: 14px;
+}
+
+.services-slider__item--active {
+  position: relative;
+  z-index: 10;
 }
 
 .services-slider__item--active .services-slider__link {
-  position: relative;
-  z-index: 10;
   border: none;
   border-radius: 5px 5px 0px 0px;
 }
 
-.services-slider__item--active .services-slider__link::after {
-  content: '';
+.services-slider__item--active::after {
+  content: "";
   position: absolute;
   bottom: 0;
   left: 0;
@@ -475,7 +484,9 @@
   text-align: center;
   text-decoration: none;
   color: var(--color-text-primary);
-  border: 1px solid #F3F3F3;
+  
+  background-color: #fff;
+  border: 1px solid #f3f3f3;
   border-radius: 5px;
   transition: opacity 0.3s ease;
 }
@@ -616,3 +627,413 @@
   background-image: url("../img/icon-doc.svg");
 }
 
+/* SUBSCRIBE */
+
+.subscribe {
+  padding: 90px 0;
+  padding-left: 222px;
+  border-radius: 5px;
+  background: url("../img/bg-subscribe.svg") no-repeat center / cover;
+  overflow-x: hidden;
+}
+
+.subscribe__inner {
+  position: relative;
+  z-index: 1;
+}
+
+.subscribe__inner::after {
+  content: "";
+  position: absolute;
+  bottom: -114px;
+  right: 114px;
+  width: 613px;
+  height: 481px;
+  background: url("../img/bg-subscribe-puppy.png") no-repeat center / contain;
+}
+
+.subscribe__heading {
+  margin-bottom: 32px;
+  color: #fff;
+}
+
+.subscribe__form {
+  display: flex;
+  align-items: center;
+}
+
+.subscribe__input {
+  width: 335px;
+  margin: 21px;
+  padding: 15px 22px;
+  color: var(--color-text-primary);
+  background-color: #fff;
+  border: 2px solid transparent;
+  border-radius: 5px;
+  outline: none;
+  transition: border-color 0.3s ease;
+}
+
+.subscribe__input:not(:focus):not(:placeholder-shown):invalid {
+  border-color: #ff6347;
+}
+
+.subscribe__input:not(:focus):not(:placeholder-shown):valid {
+  border-color: #90ee90;
+}
+
+.subscribe__input::placeholder {
+  color: var(--color-text-secondary);
+}
+
+/* ARTICLES */
+
+.articles {
+  padding-top: 216px;
+  padding-bottom: 262px;
+}
+
+.articles__heading {
+  margin-bottom: 80px;
+  text-align: center;
+}
+
+.articles__list {
+  display: flex;
+  align-items: flex-start;
+  margin: 0;
+  padding: 0 7px;
+}
+
+.articles__item:not(:last-child) {
+  margin-right: 24px;
+}
+
+.article {
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  width: 305px;
+  height: 435px;
+  background-color: #fff;
+  border: 1px solid #e4e4e2;
+  border-radius: 5px;
+}
+
+.article__poster {
+  width: 305px;
+  height: 180px;
+  object-fit: cover;
+}
+
+.article__top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+  margin-bottom: 2px;
+}
+
+.article__tags-list {
+  display: none;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.article__tags-item:not(:last-child) {
+  margin-right: 7px;
+}
+
+.article__tag {
+  font-size: 14px;
+  line-height: 22px;
+  text-decoration: none;
+  color: #3d9cea;
+}
+
+.article__tag:hover {
+  text-decoration: underline;
+}
+
+.article__date {
+  align-self: flex-end;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.article__info {
+  padding: 22px;
+  padding-top: 21px;
+  padding-bottom: 35px;
+}
+
+.article__heading {
+  margin-bottom: 10px;
+  padding: 0 8px;
+}
+
+.article__text {
+  margin: 0;
+  margin-bottom: 34px;
+  padding: 0 8px;
+  -webkit-line-clamp: 3;
+}
+
+.article__link {
+  position: relative;
+  z-index: 1;
+  text-decoration: none;
+  font-weight: 500;
+  color: var(--color-text-primary);
+  transition: opacity 0.3s ease;
+}
+
+.article__link-wrapper {
+  display: inline-flex;
+  align-items: center;
+}
+
+.article__link-wrapper::before {
+  content: "";
+  margin-right: 5px;
+  width: 28px;
+  height: 27px;
+  background: url("../img/icon-pet.svg") no-repeat center / contain;
+}
+
+.article__link::after {
+  content: "";
+  position: absolute;
+  bottom: 4px;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 4px;
+  background-color: #f4ffad;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.article__link:hover {
+  opacity: 0.8;
+}
+
+.article__link:hover::after {
+  opacity: 1;
+}
+
+.article__link:active {
+  opacity: 0.6;
+}
+
+.article--active {
+  flex-direction: row;
+  flex-grow: 1;
+}
+
+.article--active .article__poster {
+  height: 435px;
+}
+
+.article--active .article__tags-list {
+  display: flex;
+}
+
+.article--active .article__top {
+  margin-bottom: 30px;
+  flex-direction: row;
+}
+
+.article--active .article__info {
+  padding: 0 26px;
+  padding-top: 40px;
+  padding-bottom: 36px;
+}
+
+.article--active .article__heading {
+  padding: 0;
+  margin-bottom: 15px;
+}
+
+.article--active .article__text {
+  padding: 0;
+}
+
+/* CONTACT */
+
+.contact {
+  padding-bottom: 244px;
+}
+
+.contact__inner {
+  display: flex;
+
+  background-color: #333;
+}
+
+.contact__map {
+  border: none;
+  width: 462px;
+  flex-shrink: 0;
+}
+
+.contact__wrapper {
+  padding-top: 62px;
+  padding-bottom: 74px;
+  padding-left: 166px;
+  padding-right: 320px;
+  background-image: url(../img/form-bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-position-x: 100%;
+  background-size: 120%;
+}
+
+.contact__heading {
+  margin-bottom: 14px;
+  color: #fff;
+}
+
+.contact__text {
+  margin: 0;
+  margin-bottom: 29px;
+}
+
+.contact__form-input {
+  display: block;
+  width: 100%;
+  padding: 14px 22px;
+}
+
+.contact__form-input::placeholder {
+  color: var(--color-text-secondary);
+}
+
+textarea.contact__form-input {
+  min-height: 165px;
+  resize: vertical;
+}
+
+.contact__form-input:not(:last-child) {
+  margin-bottom: 14px;
+}
+
+.contact__form-button {
+  margin-top: 30px;
+}
+
+/* SITE-FOOTER */
+
+.site-footer {
+  position: relative;
+  z-index: 1;
+  padding-top: 54px;
+  padding-bottom: 69px;
+  background-color: #f3f3f3;
+  border: 1px solid #ebebeb;
+}
+
+.site-footer__inner {
+  display: flex;
+  align-items: flex-start;
+}
+
+.footer__logo-wrapper {
+  margin-right: 67px;
+  align-self: center;
+}
+
+.footer-nav {
+  margin-right: auto;
+  display: flex;
+  align-items: flex-start;
+}
+
+.footer-nav__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.footer-nav__list:not(:last-child) {
+  margin-right: 87px;
+}
+
+.footer-nav__link {
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  font-weight: 500;
+  text-decoration: none;
+  white-space: nowrap;
+  color: var(--color-text-primary);
+  transition: opacity 0.3s ease;
+}
+
+.footer-nav__link::after {
+  content: "";
+  position: absolute;
+  bottom: 4px;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 4px;
+  background-color: #f4ffad;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.footer-nav__link:hover::after {
+  opacity: 1;
+}
+
+.footer-nav__link:active {
+  opacity: 0.6;
+}
+
+.footer__working-times {
+  margin-right: 112px;
+  width: 118px;
+}
+
+.footer__address {
+  margin-right: 87px;
+  max-width: 185px;
+}
+
+.footer__address,
+.footer__working-times,
+.footer__phones {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  color: var(--color-text-primary);
+}
+
+.footer__address::before,
+.footer__working-times::before,
+.footer__phones::before {
+  align-self: flex-start;
+  flex-shrink: 0;
+}
+
+.footer__phones .phones__list {
+  flex-direction: column;
+}
+
+.footer__phones .phones__item::after {
+  display: none;
+}
+
+.copyright {
+  position: absolute;
+  bottom: 23px;
+  right: 65px;
+  margin: 0;
+  font-size: 14px;
+  line-height: 18px;
+  color: #5c5c5c;
+}
