--- a/css/modules.css
+++ b/css/modules.css
@@ -36,7 +36,9 @@
   font-weight: 500;
   line-height: 21px;
   white-space: nowrap;
+  border: none;
   border-radius: 3px;
+  cursor: pointer;
   transition: background-color .3s ease;
 }
 
