--- a/css/main.css
+++ b/css/main.css
@@ -23,8 +23,12 @@
 
 .address {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   font-style: normal;
+}
+
+.address--horizontal {
+  align-items: center;
 }
 
 .address::before {
@@ -37,6 +41,10 @@
 
 .phones {
   display: flex;
+  align-items: flex-start;
+}
+
+.phones--horizontal {
   align-items: center;
 }
 
@@ -96,15 +104,11 @@
 
 .working-times {
   display: flex;
+  align-items: flex-start;
+}
+
+.working-times--horizontal {
   align-items: center;
-}
-
-.working-time__list {
-  flex-direction: column;
-}
-
-.working-times--horizontal .working-time__list {
-  flex-direction: row;
 }
 
 .working-times::before {
@@ -115,11 +119,25 @@
   background: url("../img/icon-schedule.svg") no-repeat center / contain;
 }
 
-.working-time__list {
+.working-times__list {
   display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+.working-times--horizontal .working-times__list {
+  flex-direction: row;
+}
+
+.working-times__item:not(:last-child) {
+  margin-bottom: 3px;
+}
+
+.working-times--horizontal .working-times__item {
+  margin-bottom: 0;
+  margin-right: 17px;
 }
 
 .site-header__inner {
@@ -199,6 +217,7 @@
   display: block;
   font-weight: 500;
   text-decoration: none;
+  text-transform: capitalize;
   color: var(--color-text-primary);
   transition: opacity 0.3s ease;
 }
@@ -947,7 +966,7 @@ textarea.contact__form-input {
   position: relative;
   z-index: 1;
   padding-top: 54px;
-  padding-bottom: 69px;
+  padding-bottom: 100px;
   font-weight: 500;
   font-size: 14px;
   line-height: 18px;
@@ -957,6 +976,8 @@ textarea.contact__form-input {
 }
 
 .site-footer__inner {
+  z-index: 1;
+  position: relative;
   display: flex;
   align-items: flex-start;
 }
@@ -1020,15 +1041,169 @@ textarea.contact__form-input {
 
 .footer__address {
   margin-right: 87px;
-  max-width: 185px;
+  max-width: 155px;
 }
 
 .copyright {
   position: absolute;
-  bottom: 23px;
-  right: 65px;
+  bottom: -80px;
+  right: 0;
   margin: 0;
   font-size: 14px;
   line-height: 18px;
   color: #5c5c5c;
+}
+
+/* MODAL */
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  display: none;
+  background-color: rgba(255, 255, 255, 0.9);
+  overflow-y: scroll;
+}
+
+.modal--open {
+  display: block;
+}
+
+.modal::-webkit-scrollbar {
+  display: none;
+}
+
+.modal__inner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding-top: 120px;
+  padding-bottom: 137px;
+  padding-left: 70px;
+  padding-right: 50px;
+  background-color: var(--color-orange);
+  background-image: url('../img/bg-form.png'), url("../img/bg-modal.svg");
+  background-repeat: no-repeat;
+  background-position: left bottom, center;
+  background-size: initial, contain;
+}
+
+.modal__close {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 18px;
+  height: 18px;
+  background: url("../img/icon-close.svg") no-repeat center / contain;
+  border: none;
+  cursor: pointer;
+}
+
+.modal__content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.modal__login {
+  margin-right: 136px;
+}
+
+.modal__login-heading {
+  margin-bottom: 21px;
+  font-size: 20px;
+}
+
+.modal__login-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.modal__login-item:not(:last-child) {
+  margin-bottom: 21px;
+}
+
+.modal__login-link {
+  display: flex;
+  align-items: center;
+  padding: 15px 35px;
+  text-decoration: none;
+  white-space: nowrap;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 21px;
+  color: var(--color-text-primary);
+  background-color: #fff;
+  transition: opacity .3s ease;
+}
+
+.modal__login-link::before {
+  content: '';
+  width: 20px;
+  height: 20px;
+  margin-right: 14px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.modal__login-link--google::before {
+  background-image: url('../img/icon-google.svg');
+}
+
+.modal__login-link--facebook::before {
+  background-image: url('../img/icon-facebook.svg');
+}
+
+.modal__form-heading {
+  margin-bottom: 25px;
+}
+
+.modal__form-input {
+  width: 355px;
+  display: block;
+  padding: 15px 22px;
+  background-color: #fff;
+  border: none;
+  outline: none;
+}
+
+input.modal__form-input {
+  margin-bottom: 21px;
+}
+
+textarea.modal__form-input {
+  min-height: 165px;
+  margin-bottom: 27px;
+  resize: vertical;
+}
+
+.modal__form-input::placeholder {
+  color: #949494;
+  opacity: 1;
+}
+
+.modal__form-btn {
+  padding: 15px 55px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #000;
+  border: none;
+  cursor: pointer;
+  transition: opacity .3s ease;
+}
+
+.modal__login-link:hover,
+.modal__form-btn:hover {
+  opacity: .8;
+}
+
+.modal__login-link:active,
+.modal__form-btn:active {
+  opacity: 0.6;
 }
