--- a/css/faq.css
+++ b/css/faq.css
@@ -196,5 +196,8 @@
 
 .accordion--waiting .accordion__toggle {
   background-image: url('../img/icon-clock.svg');
-  pointer-events: none;
+}
+
+.accordion--waiting .accordion__toggle::before {
+  content: none;
 }
