--- a/css/modules.css
+++ b/css/modules.css
@@ -3,7 +3,7 @@
 :root {
   --color-text-primary: #333;
   --color-text-secondary: #949494;
-  --color-orange: #FFBD54;
+  --color-orange: #ffbd54;
 }
 
 /* REUSABLES */
@@ -40,7 +40,7 @@
   border: none;
   border-radius: 3px;
   cursor: pointer;
-  transition: background-color .3s ease;
+  transition: opacity 0.3s ease;
 }
 
 .btn--dark {
@@ -51,20 +51,12 @@
   background-color: var(--color-orange);
 }
 
-.btn--dark:hover {
-  background-color: rgba(51, 51, 51, 0.8);
+.btn:hover {
+  opacity: 0.8;
 }
 
-.btn--light:hover {
-  background-color: rgba(255, 189, 84, 0.8);
-}
-
-.btn--dark:active {
-  background-color: rgba(51, 51, 51, 0.6);
-}
-
-.btn--light:active {
-  background-color: rgba(255, 189, 84, 0.6);
+.btn:active {
+  opacity: 0.6;
 }
 
 /* DEFAULT STYLES */
@@ -87,7 +79,7 @@ body {
   line-height: 20px;
   color: var(--color-text-secondary);
   background-color: #f9f9f9;
-  background-image: url('../img/bg-body.svg');
+  background-image: url("../img/bg-body.svg");
   overflow-x: hidden;
 }
 
